# bicubic-image-resize

./: .gitignore  CMakeLists.txt  README.md  built-vec  built-vec.cc  image.hpp  main.cpp  resize.hpp  utils.hpp  程序说明.md
