cmake_minimum_required(VERSION 2.8)
project(resize)
add_compile_options(-O3)
add_executable(resize main.cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(Threads REQUIRED)
target_link_libraries(resize Threads::Threads)
find_package(OpenMP REQUIRED)
target_link_libraries(resize OpenMP::OpenMP_CXX)